Fix textbox truncation bug

--- a/src/main/resources/css/ScrollbarStyle.css
+++ b/src/main/resources/css/ScrollbarStyle.css
@@ -1,6 +1,6 @@
 .scroll-pane .scroll-bar:vertical .thumb {
     -fx-background-color: #128C7E; /* Color of the scrollbar thumb */
-    -fx-background-radius: 5px;   /* Rounded corners */
+    -fx-background-radius: 6px;   /* Rounded corners */
     -fx-pref-width: 12px;          /* Width of vertical scrollbar */
 }
 
